# os-wmacevoy

./: README.md
.github/workflows/: copy_command.yml  copy_command_cloud.yml
copy_command/: CMakeLists.txt  README.md
copy_command/include/: copy_file.h
copy_command/src/: copy_file.c  test_copy_file.c
copy_file/: CMakeLists.txt
copy_file/android/: settings.gradle.kts
copy_file/android/app/: build.gradle.kts
copy_file/android/app/src/androidTest/java/com/github/copyfile/: ExampleInstrumentedTest.kt
copy_file/android/app/src/main/: AndroidManifest.xml
copy_file/android/app/src/main/java/com/github/copyfile/: MainActivity.kt
copy_file/android/app/src/main/java/com/github/copyfile/ui/dashboard/: DashboardFragment.kt  DashboardViewModel.kt
copy_file/android/app/src/main/java/com/github/copyfile/ui/home/: HomeFragment.kt  HomeViewModel.kt
copy_file/android/app/src/main/java/com/github/copyfile/ui/notifications/: NotificationsFragment.kt  NotificationsViewModel.kt
copy_file/android/app/src/main/res/navigation/: mobile_navigation.xml
copy_file/android/app/src/main/res/values/: strings.xml  themes.xml
copy_file/android/app/src/main/res/values-night/: themes.xml
copy_file/android/app/src/test/java/com/github/copyfile/: ExampleUnitTest.kt
copy_file/android/gradle/wrapper/: gradle-wrapper.properties
copy_file/include/: copy_file.h
copy_file/src/: copy_file.c  main_copy_command.c  test_copy_file.c
dc2/: fork-example.c
devcontainer/: README.md  ba.c
docker-process/: Dockerfile  README.md
docs/: macos.md  windows.md
filesys/: run
fork-exec/: Makefile  fork-example.c  game.c
game/: README.md  game.c  game.csv
hello/: Dockerfile  Makefile  README.md
memory/: Makefile  bench_mem.cpp  bitmap.cpp  memory.cpp  memory2.cpp  memory3.cpp
memory/tcp/: docker-compose.yml
memory/tcp/client/: client.c
memory/tcp/server/: server.c
process/: Makefile  bad.c  prob.c  tiny-shell.c
sandbox/: fib.c  process.c  process.sh
security/: CMakeLists.txt  Dockerfile
security/.devcontainer/: Dockerfile  devcontainer.json
security/bedrock/: aead.c  bedrock.c  bedrock.h  p521_ec.c  p521_ec.h  p521_ecdsa.c  p521_ecies.c  p521_field.c  p521_field.h  p521_scalar.c  p521_scalar.h  prng.c  sha256_fallback.c  sha512_fallback.c  sphincs_sha2_128s.c  trng.c
security/examples/: bedrock_example.c
security/tests/: test_aead.c  test_aead512.c  test_bedrock.c  test_p521_ecdsa.c  test_p521_ecies.c  test_p521_field.c  test_prng.c  test_sphincs.c
thread/: average.c  philosophers.cpp
threads/: Makefile  dining_philosophers.c  philosophers.c
